# metrics-proposal

./: .gitignore  Cargo.toml  README.md
dummy-device/: Cargo.toml
dummy-device/src/: block_device.rs  block_device_v3.rs  lib.rs  vsock_device.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
src/: lib.rs
vmm/: Cargo.toml
vmm/src/: lib.rs  vmm_metrics.rs
