[package]
name = "vmm"
version = "0.1.0"
authors = ["Andreea Florescu <fandree@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = { path = "../metrics" }
dummy-device = { path = "../dummy-device" }
serde = ">=1.0.27"
serde_derive = ">=1.0.27"
serde_json = ">=1.0.9"